# AniMate

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
src/: animation.cpp  main.cpp
src/Include/: animate.h
